--- a/src/app/admin/mentor-dialog/mentor-dialog.component.html
+++ b/src/app/admin/mentor-dialog/mentor-dialog.component.html
@@ -1,11 +1,11 @@
 <mat-dialog-content class="mat-typography">
     <div class="header">
-      <h3>Add New Batch</h3>
+      <h3>Add New Mentor</h3>
     </div>
     <hr>
     <form [formGroup]="createMentor" (ngSubmit)="onSubmit()">
     <div class="container">
-      <div class="row m-auto">
+      <div class="row">
         <div class="col-md-12">
           <mat-label class="d-block">Mentor Name</mat-label>
           <mat-form-field appearance="outline">
