--- a/src/app/admin/batch-dialog/batch-dialog.component.html
+++ b/src/app/admin/batch-dialog/batch-dialog.component.html
@@ -5,7 +5,7 @@
   <hr>
   <form [formGroup]="createBatch" (ngSubmit)="onSubmit()">
   <div class="container">
-    <div class="row m-auto">
+    <div class="row">
       <div class="col-md-12">
         <mat-label class="d-block">Batch Name</mat-label>
         <mat-form-field appearance="outline">
