--- a/src/app/admin/batch/batch.component.html
+++ b/src/app/admin/batch/batch.component.html
@@ -4,8 +4,8 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="#" style="color: #FAA81D;">
-              <b>Batch List</b>
+            <a class="nav-link">
+              <p>Batch List</p>
             </a>
           </li>
         </ul>
@@ -30,7 +30,7 @@
         <th scope="col">Start Date</th>
         <th scope="col">End Date</th>
         <th scope="col">Status</th>
-        <th scope="col">Action</th>
+        <th scope="col" class="action">Action</th>
       </tr>
     </thead>
     <tbody>
@@ -47,8 +47,8 @@
         <td>@mdo</td>
         <td>Mark</td>
         <td class="action">
-          <span class="material-symbols-outlined"> delete</span>
           <span class="material-symbols-outlined">edit</span>
+          <span class="material-symbols-outlined"> delete</span>
         </td>
       </tr>
     </tbody>
