--- a/src/app/admin/status/status.component.html
+++ b/src/app/admin/status/status.component.html
@@ -1,6 +1,6 @@
 <mat-card class="status">
   <div class="headers">
-    <h3 style="color: #086288; font-family: Lucida Console, Monaco;">Change Status</h3>
+    <h3 style="color: #086288; font: 15px Verdana, Sans-serif; font-weight: 600;">Change Status</h3>
     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
   </div>
   <hr>
