--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -3,7 +3,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <div class="row">
         <div class="col-md-4">
-          <a class="nav-link" href="#">
+          <a class="nav-link" routerLink="batch">
             <img src="/assets/images/logo1.png" alt="" />
           </a>
         </div>
