--- a/src/app/admin/mentor/mentor.component.scss
+++ b/src/app/admin/mentor/mentor.component.scss
@@ -1,5 +1,14 @@
 .newBatch {
-    background-color: #FAA81D;
+  background-color: #FAA81D;
+}
+
+.nav-link {
+  color: #FAA81D;
+  font: 13px Verdana, Sans-serif;
+
+  p {
+    font-weight: 500
+  }
 }
 
 tbody,
@@ -8,21 +17,22 @@ tfoot,
 th,
 thead,
 tr {
-    border-color: none;
-    border-style: solid;
-    border-width: 0;
+  border-color: none;
+  border-style: solid;
+  border-width: 0;
 }
 
 table thead {
   background-color: #E9EEF7;
+
   tr th {
     font-weight: 500;
   }
 }
 
 .matTable {
-    background-color: white;
-    border: 1px solid #E9EEF7;
+  background-color: white;
+  border: 1px solid #E9EEF7;
 }
 
 .searchBatch {
@@ -31,4 +41,13 @@ table thead {
   background-color: #F4F5F8;
   width: 450px;
   height: 30px;
+}
+
+input::placeholder {
+  font: 13px Verdana, Sans-serif;
+}
+
+.action {
+  display: flex;
+  justify-content: space-evenly;
 }
