--- a/src/app/admin/request/request.component.html
+++ b/src/app/admin/request/request.component.html
@@ -4,8 +4,8 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="#" style="color: #FAA81D;">
-                <b>Request List</b>
+              <a class="nav-link">
+                <p>Request List</p>
               </a>
             </li>
           </ul>
