--- a/src/app/admin/status/status.component.scss
+++ b/src/app/admin/status/status.component.scss
@@ -1,7 +1,7 @@
 .mat-card:not([class*=mat-elevation-z]) {
     box-shadow: none;
     margin: auto;
-    width: 40%;
+    width: 35%;
     border-radius: 15px;
     margin-top: 100px;
     border: 1px solid #DCDCDC;
@@ -21,7 +21,6 @@
 hr {
     margin: 0rem 0; 
     color: inherit;
-    border: 1px solid #707070;
     border-top: 1px solid;
     opacity: .50;
 }
@@ -36,10 +35,21 @@ mat-form-field {
     width: 75%;
     margin: auto;
     padding-top: 15px;
-}
-::ng-deep .mat-form-field-appearance-outline.mat-focused .mat-form-field-outline, .mat-form-field-appearance-outline.mat-form-field-invalid .mat-form-field-outline {
-    transition: opacity 100ms cubic-bezier(0.25, 0.8, 0.25, 1);
-    height: 40px !important;
-    border: #707070;
+    font: 13px Verdana, Sans-serif;
 
+}
+
+::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
+    display: flex;
+    position: absolute;
+    top: 0.25em;
+    left: 0;
+    height: 35px !important;
+    right: 0;
+    bottom: 0;
+    pointer-events: none;
+}
+
+::ng-deep .mat-form-field-appearance-outline .mat-form-field-infix {
+    padding: 0em 0 1em 0;
 }
