--- a/src/app/mentor/dashboard/dashboard.component.html
+++ b/src/app/mentor/dashboard/dashboard.component.html
@@ -4,25 +4,23 @@
       <div class="col-md-3">
         <mat-card>
           <h3>Gender</h3>
-          <div class="gender">
             <canvas id="gender"></canvas>
-          </div>
         </mat-card>
       </div>
+      <!-- <div class="col-md-1"></div> -->
       <div class="col-md-4">
         <mat-card>
           <h3>Year of Passing</h3>
           <canvas id="passing"></canvas>
         </mat-card>
       </div>
-      <div class="col-md-5">
+      <div class="col-md-4">
         <mat-card>
           <h3>Experience</h3>
           <canvas id="experience"></canvas>
         </mat-card>
       </div>
     </div>
-    <br>
     <div class="row">
       <div class="col-md-7">
         <mat-card>
@@ -32,8 +30,8 @@
       </div>
       <div class="col-md-5">
         <mat-card>
-          <h3>Batch Performance</h3>
           <div class="performance">
+          <h3>Batch Performance</h3>
           <canvas id="performance"></canvas>
         </div>
         </mat-card>
