--- a/src/app/mentor/dashboard/dashboard.component.html
+++ b/src/app/mentor/dashboard/dashboard.component.html
@@ -1,13 +1,14 @@
 <div class="container-fluid">
-  <mat-card>
+  <mat-card style="border-radius: 0px;">
     <div class="row">
-      <div class="col-md-3">
+      <div class="col-md-4">
         <mat-card>
           <h3>Gender</h3>
+          <div class="gender">
             <canvas id="gender"></canvas>
+          </div>
         </mat-card>
       </div>
-      <!-- <div class="col-md-1"></div> -->
       <div class="col-md-4">
         <mat-card>
           <h3>Year of Passing</h3>
@@ -21,17 +22,20 @@
         </mat-card>
       </div>
     </div>
+    <br>
     <div class="row">
-      <div class="col-md-7">
+      <div class="col-md-8">
         <mat-card>
           <h3>Employee Degree</h3>
+          <div class="degree">
           <canvas id="degree"></canvas>
+        </div>
         </mat-card>
       </div>
-      <div class="col-md-5">
+      <div class="col-md-4">
         <mat-card>
-          <div class="performance">
           <h3>Batch Performance</h3>
+          <div class="performance">
           <canvas id="performance"></canvas>
         </div>
         </mat-card>
