--- a/src/app/mentor/mentor.component.scss
+++ b/src/app/mentor/mentor.component.scss
@@ -7,11 +7,10 @@ nav {
     border: 1px solid #0000000A;
 }
 
-.details {
-    height: 45px;
-
-    a {
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+@media (min-width: 992px) {
+    .navbar-expand-lg .navbar-collapse {
+        display: block !important;
+        flex-basis: auto;
     }
 }
 
@@ -77,7 +76,6 @@ small .active {
 }
 
 :host ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
-    // color: transparent;
     outline: none !important;
 }
 
@@ -88,8 +86,46 @@ small .active {
     width: 75%;
 }
 
-.user img {
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
+.user {
+    margin-top: 12px;
+
+    img {
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+    }
+}
+
+.profile {
+    display: flex;
+}
+
+.name {
+    position: relative;
+    top: 6px;
+    font-family: Verdana, Sans-serif;
+}
+
+::ng-deep button.mat-menu-item:hover {
+    font-size: 16px;
+    color: #075575;
+}
+
+mat-menu {
+    font-size: 12px;
+    font-family: Verdana, Sans-serif;
+}
+
+@media (min-width: 768px) {
+    .col-md-2 {
+        flex: 0 0 auto;
+        width: 16.66666667%;
+        display: flex;
+        justify-content: center;
+    }
+}
+
+.downArrow {
+    font-weight: 800;
+    font-size: 20px;
 }
