--- a/src/app/mentor/batch-dialog/batch-dialog.component.html
+++ b/src/app/mentor/batch-dialog/batch-dialog.component.html
@@ -6,7 +6,7 @@
         <th scope="col">No</th>
         <th scope="col">Employee ID</th>
         <th scope="col">Employee Name</th>
-        <th scope="col">Attendance</th>
+        <th scope="col" class="attendance">Attendance</th>
       </tr>
     </thead>
     <tbody>
@@ -15,26 +15,25 @@
         <td>Mark</td>
         <td>Otto</td>
         <td class="action">
-          <div class="currentDiagnosisSwitch1">
-            <label class="currentDiagnosisToggle">
-              <input type="checkbox"/>
-              <div class="slider round">
-                <span class="on"></span> <span class="off"></span>
-              </div>
+          <div class="morning">
+            <p>M</p>
+            <label class="switch">
+              <input type="checkbox" checked>
+              <span class="slider round"></span>
             </label>
           </div>
-          <div class="currentDiagnosisSwitch1">
-            <label class="currentDiagnosisToggle2">
-              <input type="checkbox"/>
-              <div class="slider round">
-                <span class="on"></span> <span class="off"></span>
-              </div>
+          <div class="afternoon">
+            <p>N</p>
+            <label class="switch">
+              <input type="checkbox" checked>
+              <span class="sliderr round"></span>
             </label>
           </div>
-          <!-- <mat-checkbox class="morning example-margin"></mat-checkbox>
-          <mat-checkbox class="afternoon example-margin"></mat-checkbox> -->
         </td>
       </tr>
     </tbody>
   </table>
+    <div class="submit">
+      <button mat-raised-button class="next" routerLink="">Submit</button>
+    </div>
 </mat-dialog-content>
