--- a/src/app/mentor/batch-dialog/batch-dialog.component.scss
+++ b/src/app/mentor/batch-dialog/batch-dialog.component.scss
@@ -1,85 +1,119 @@
 mat-dialog-content {
-    width: 1200px ;
+    width: 1200px;
+}
+
+::ng-deep .mat-dialog-container {
+    border-radius: 12px;
+}
+.table {
+    font-family: 'Open Sans', sans-serif;
+
+}
+.table>thead {
+    vertical-align: bottom;
+    background-color: #DCDCDC;
+}
+
+.table>:not(caption)>*>* {
+    font-weight: 600;
+}
+
+.attendance {
+    display: flex;
+    justify-content: center;
+}
+
+h3 {
+    font-family: 'Open Sans', sans-serif;
+    color: #086288;
+    font-weight: 600;
+    font-size: 16px;
 }
 
 .action {
     display: flex;
+    justify-content: space-evenly;
+    .morning, .afternoon {
+        display: flex;
+    }
 }
 
-.slider.round {
-    border-radius: 50px !important;
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 32px;
+    height: 20px;
 }
 
-.slider {
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider,
+.sliderr {
     position: absolute;
     cursor: pointer;
-    top: 0px;
-    left: 22px;
-    right: -4px;
-    bottom: 12px;
-    background-color: grey;
-    transition: 0.4s;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
 }
 
-.currentDiagnosisToggle {
-    position: relative;
-    display: inline-block;
-    width: 60px;
-    height: 30px;
-}
-.currentDiagnosisToggle2 {
-    position: relative;
-    display: inline-block;
-    width: 60px;
-    height: 30px;
-}
-
-button, input, optgroup, select, textarea {
-    margin: 0;
-    font-family: inherit;
-    font-size: inherit;
-    line-height: inherit;
-    display: none;
-}
-
-.slider:before {
+.slider:before,
+.sliderr:before {
     position: absolute;
     content: "";
-    height: 13px;
+    height: 14px;
     width: 15px;
-    left: 4px;
+    left: -12px;
     bottom: 3px;
     background-color: white;
-    transition: 0.4s;
-    border-radius: 50%;
+    -webkit-transition: .4s;
+    transition: .4s;
 }
 
-.on {
-    color: white;
-    position: absolute;
-    transform: translate(-131%, -45%);
-    top: 50%;
-    left: 62%;
-    font-size: 12px;
-    display: none;
-}
-
-.off {
-    color: white;
-    position: absolute;
-    transform: translate(-131%, -45%);
-    top: 50%;
-    left: 90%;
-    font-size: 12px;
-}
-
-input:checked + .slider {
-    background-color: #13BC07;
-}
-.currentDiagnosisToggle2 input:checked + .slider {
+input:checked+.slider {
     background-color: #CA0202;
 }
 
-input:checked + .slider:before {
-    transform: translateX(24px);
+input:checked+.sliderr {
+    background-color: #13BC07;
+}
+
+input:focus+.slider {
+    box-shadow: 0 0 1px #CA0202;
+}
+
+input:focus+.sliderr {
+    box-shadow: 0 0 1px #13BC07;
+}
+
+input:checked+.slider:before,
+input:checked+.sliderr:before {
+    -webkit-transform: translateX(-2px);
+    -ms-transform: translateX(-2px);
+    transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round,
+.sliderr.round {
+    border-radius: 34px;
+}
+
+.slider.round:before,
+.sliderr.round:before {
+    border-radius: 50%;
+}
+    
+.submit {
+    float: right;
+    button {
+        border-radius: 7px;
+    }
 }
