--- a/src/app/mentor/batch/batch.component.scss
+++ b/src/app/mentor/batch/batch.component.scss
@@ -1,40 +1,44 @@
 .newBatch {
-    background-color: #FAA81D;
+  background-color: #FAA81D;
 }
 
 tbody,
 td,
 tfoot,
-th,
 thead,
 tr {
-    border-color: none;
-    border-style: solid;
-    border-width: 0;
+  border-color: none;
+  border-style: solid;
+  border-width: 0;
 }
 
+input::placeholder {
+  font-size: 16px;
+}
 
 table thead {
-    background-color: #E9EEF7;
-    tr th {
-      font-weight: 500;
-    }
+  background-color: #E9EEF7;
+
+  tr th {
+    font-weight: 500;
+  }
 }
 
 .matTable {
-    background-color: white;
-    border: 1px solid #E9EEF7;
+  background-color: white;
+  border: 1px solid #E9EEF7;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .searchBatch {
-    background: url('/assets/images/search.png') no-repeat scroll 6px 6px;
-    padding-left: 30px;
-    background-color: #F4F5F8;
-    width: 450px;
-    height: 30px;
-  }
+  background: url('/assets/images/search.png') no-repeat scroll 6px 6px;
+  padding-left: 30px;
+  background-color: #F4F5F8;
+  width: 450px;
+  height: 30px;
+}
 
-  .action :hover {
-    background-color: #086288;
-    color: white;
-  }
+.action :hover {
+  background-color: #086288;
+  color: white;
+}
