--- a/src/app/employee/dashboard/mock/mock.component.html
+++ b/src/app/employee/dashboard/mock/mock.component.html
@@ -8,15 +8,21 @@
           <label>
             <h3>Attendance</h3>
           </label>
-          <p class="marks"></p>
+          <div class="marks">
+            <div class="attented">25</div><span class="slash">/</span><div class="total">40</div>
+          </div>
           <div class="timing">
-            <p class="morning">Morning</p>
-            <p class="noon">Noon</p>
+            <div class="morn">
+              <p class="morning">Morning:</p>&nbsp;&nbsp;<div style="color: #FAA81D; font-weight: bold;">25</div>/<div>40</div>
+            </div>
+            <div class="noon">
+              <p class="afterNoon">Noon:</p>&nbsp;&nbsp;<div style="color: #00AEF7; font-weight: bold;">25</div>/<div>40</div>
+            </div>
           </div>
         </div>
       </div>
 
-      <div class="col-md-8">
+      <div class="col-md-9">
         <div class="rating px-2">
           <label>
             <h3>Mock Ratings</h3>
