--- a/src/app/employee/employee-details/address-details/address-details.component.scss
+++ b/src/app/employee/employee-details/address-details/address-details.component.scss
@@ -1,5 +1,5 @@
 .container {
-    padding: 50px;
+    padding: 30px;
 }
 
 .mat-form-field {
@@ -17,8 +17,7 @@
     .container-sm,
     .container-xl,
     .container-xxl {
-        max-width: 1320px;
-        padding: 80px;
+        max-width: 950px;
     }
 }
 
@@ -46,8 +45,15 @@ mat-card {
     margin-left: 8px;
 }
 
-.add, .delete {
+.add,
+.delete {
     cursor: pointer;
     display: flex;
     float: right;
+}
+
+.row {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 600;
+    font-size: 14px;
 }
