--- a/src/app/employee/employee-details/approve/approve.component.html
+++ b/src/app/employee/employee-details/approve/approve.component.html
@@ -1,6 +1,6 @@
 <mat-card class="submission">
   <h3>Your request will be approved in sometime, please wait</h3>
   <div class="return">
-    <button mat-raised-button class="previous" routerLink="mock-rating">Return</button>
+    <button mat-raised-button class="previous" routerLink="/employee/dashboard/mock">Return</button>
   </div>
 </mat-card>
