--- a/src/app/employee/employee-details/employee-details.component.html
+++ b/src/app/employee/employee-details/employee-details.component.html
@@ -1,27 +1,43 @@
 <div class="container-fluid py-5">
   <div class="details">
-    <a routerLink="primary" routerLinkActive="active">Primary Info
+    <a routerLink="primary" routerLinkActive="active">
+      <span class="material-symbols-outlined" *ngIf="filled">check_circle</span>
+      Primary Info
       <hr style="height:5px;color:#FAA81D;background-color:#FAA81D">
     </a>
-    <a routerLink="secondary" routerLinkActive="active">Secondary Info
+    <a routerLink="secondary" routerLinkActive="active">
+      <span class="material-symbols-outlined" *ngIf="filled1">check_circle_outline</span>
+      Secondary Info
       <hr style="height:5px;color:#FAA81D;background-color:#FAA81D">
     </a>
-    <a routerLink="education" routerLinkActive="active">Education Details
+    <a routerLink="education" routerLinkActive="active">
+      <span class="material-symbols-outlined" *ngIf="filled2">check_circle</span>
+      Education Details
       <hr style="height:5px;color:#FAA81D;background-color:#FAA81D">
     </a>
-    <a routerLink="address" routerLinkActive="active">Address Details
+    <a routerLink="address" routerLinkActive="active">
+      <span class="material-symbols-outlined" *ngIf="filled3">check_circle</span>
+      Address Details
       <hr style="height:5px;color:#FAA81D;background-color:#FAA81D">
     </a>
-    <a routerLink="bank" routerLinkActive="active">Bank Details
+    <a routerLink="bank" routerLinkActive="active">
+      <span class="material-symbols-outlined" *ngIf="filled4">check_circle</span>
+      Bank Details
       <hr style="height:5px;color:#FAA81D;background-color:#FAA81D; border: 1px solid #FAA81D;">
     </a>
-    <a routerLink="skills" routerLinkActive="active">Technical Skills
+    <a routerLink="skills" routerLinkActive="active">
+      <span class="material-symbols-outlined" *ngIf="filled5">check_circle</span>
+      Technical Skills
       <hr style="height:5px;color:#FAA81D;background-color:#FAA81D">
     </a>
-    <a routerLink="experience" routerLinkActive="active">Experience
+    <a routerLink="experience" routerLinkActive="active">
+      <span class="material-symbols-outlined" *ngIf="filled6">check_circle</span>
+      Experience
       <hr style="height:5px;color:#FAA81D;background-color:#FAA81D">
     </a>
-    <a routerLink="contact" routerLinkActive="active">Contact
+    <a routerLink="contact" routerLinkActive="active">
+      <span class="material-symbols-outlined" *ngIf="filled7">check_circle</span>
+      Contact
       <hr style="height:5px;color:#FAA81D;background-color:#FAA81D">
     </a>
   </div>
