--- a/src/app/employee/dashboard/dashboard.component.html
+++ b/src/app/employee/dashboard/dashboard.component.html
@@ -1,29 +1,33 @@
 <nav class="navbar navbar-expand-lg">
   <div class="container-fluid">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link" href="#">
+      <div class="row">
+        <div class="col-md-4">
+          <a class="nav-link" routerLink="batch">
             <img src="/assets/images/logo1.png" alt="" />
           </a>
-        </li>
-      </ul>
-      <form class="d-flex" role="search">
-        <input class="search form-control me-2" type="search" placeholder="Search Mentor/Employee"
-          aria-label="Search" />
-      </form>
-      <div class="profile">
-        <mat-form-field appearance="outline">
-          <div class="user">
-          <img src="/assets/images/add-user (2).png" alt="...">
-          <span class="name">Name</span>
         </div>
-          <select matNativeControl required>
-            <option value="Profile">Profile</option>
-            <option value="Change Password">Change Password</option>
-            <option value="Logout">Logout</option>
-          </select>
-        </mat-form-field>
+        <div class="col-md-6">
+          <form class="d-flex" role="search">
+            <input class="search form-control me-2" type="search" placeholder="Search Mentor/Employee"
+              aria-label="Search" />
+          </form>
+        </div>
+        <div class="col-md-2">
+          <div class="profile">
+            <div class="user">
+              <img src="/assets/images/bulb.png" alt="...">
+            </div>
+            <button mat-button [matMenuTriggerFor]="menu" class="name">Moulvik
+            <span class="downArrow material-symbols-outlined">keyboard_arrow_down</span>
+          </button>
+            <mat-menu #menu="matMenu">
+              <button mat-menu-item>Profile</button>
+              <button mat-menu-item>Change Password</button>
+              <button mat-menu-item>Logout</button>
+            </mat-menu>
+          </div>
+        </div>
       </div>
     </div>
   </div>
