--- a/src/app/employee/dashboard/dashboard.component.scss
+++ b/src/app/employee/dashboard/dashboard.component.scss
@@ -7,11 +7,10 @@ nav {
     border: 1px solid #0000000A;
 }
 
-.details {
-    height: 45px;
-
-    a {
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+@media (min-width: 992px) {
+    .navbar-expand-lg .navbar-collapse {
+        display: block !important;
+        flex-basis: auto;
     }
 }
 
@@ -29,6 +28,50 @@ nav {
 .d-flex {
     width: 547px;
     border-radius: 6px;
+}
+
+.user {
+    margin-top: 12px;
+
+    img {
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+    }
+}
+
+.profile {
+    display: flex;
+}
+
+.name {
+    position: relative;
+    top: 6px;
+    font-family: Verdana, Sans-serif;
+}
+
+::ng-deep button.mat-menu-item:hover {
+    font-size: 16px;
+    color: #075575;
+}
+
+mat-menu {
+    font-size: 12px;
+    font-family: Verdana, Sans-serif;
+}
+
+@media (min-width: 768px) {
+    .col-md-2 {
+        flex: 0 0 auto;
+        width: 16.66666667%;
+        display: flex;
+        justify-content: center;
+    }
+}
+
+.downArrow {
+    font-weight: 800;
+    font-size: 20px;
 }
 
 mat-drawer-container {
@@ -62,6 +105,7 @@ mat-drawer button {
 mat-drawer-content {
     padding: 25px;
     background-color: #F9F9F9;
+    overflow-y: hidden;
 }
 
 .home {
