--- a/src/app/employee/dashboard/mock/mock.component.scss
+++ b/src/app/employee/dashboard/mock/mock.component.scss
@@ -1,19 +1,5 @@
-.count {
-    border: 1px solid #00000014;
-    width: 300px;
-    height: 350px;
-    border-radius: 15px;
-}
-
-
 mat-card {
     margin-top: 25px;
-}
-
-:host ::ng-deep canvas {
-        display: block;
-        box-sizing: border-box;
-        width: 872px !important;;
 }
 
 .remock, .mock {
@@ -44,8 +30,57 @@ mat-card {
     border-radius: 8px;
     label {
         position: relative;
-        bottom: 12px;
+        bottom: 15px;
         left: 25px;
         background:white
     }
+}
+
+h3 {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: bolder;
+    font-size: 15px;
+}
+
+.attented {
+    font-family: 'Open Sans', sans-serif;
+    color: #075575;
+    font-size: 80px;
+    font-weight: bolder;
+}
+
+.total, .slash {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 50px;
+    font-weight: bolder;
+}
+.marks {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    top: 15px;
+}
+
+.timing {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: bolder;
+    font-size: 13px;
+    margin-top: 70px;
+}
+
+.morn, .noon {
+    display: flex;
+}
+
+#demo {
+    width: 100%;
+    height: 206px;
+}
+
+mat-card {
+    height: 100vh;
+}
+
+.container-fluid {
+    overflow-y: hidden;
 }
