--- a/src/app/employee/employee-details/education-details/education-details.component.scss
+++ b/src/app/employee/employee-details/education-details/education-details.component.scss
@@ -1,5 +1,5 @@
 .container {
-    padding: 50px;
+    padding: 30px;
 }
 
 .mat-form-field {
@@ -16,8 +16,7 @@
     .container-sm,
     .container-xl,
     .container-xxl {
-        max-width: 1320px;
-        padding: 30px;
+        max-width: 950px;
     }
 }
 
@@ -44,4 +43,10 @@
     cursor: pointer;
     display: flex;
     float: right;
+}
+
+.row {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 600;
+    font-size: 14px;
 }
