--- a/src/app/employee/employee-details/employee-details.component.scss
+++ b/src/app/employee/employee-details/employee-details.component.scss
@@ -2,7 +2,9 @@
     display: flex;
     justify-content: space-evenly;
     font-size: 15px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: bolder;
+
     hr {
         display: none;
     }
@@ -13,13 +15,24 @@
     }
 
     .active {
-        font-size: 30px;
+        font-size: 25px;
         color: #086288;
-        font-weight: 500;
+        font-weight: bolder;
+
+        span {
+            font-size: 21px;
+        }
 
         hr {
             display: block;
-            width: 60%;
+            width: 50%;
         }
     }
+}
+
+span {
+    color: #ffffff;
+    background-color: #00B530;
+    border-radius: 50%;
+    font-size: 15px;
 }
