--- a/src/app/employee/employee-details/experience/experience.component.scss
+++ b/src/app/employee/employee-details/experience/experience.component.scss
@@ -1,5 +1,5 @@
 .container {
-    padding: 50px;
+    padding: 30px;
 }
 
 .mat-form-field {
@@ -17,8 +17,7 @@
     .container-sm,
     .container-xl,
     .container-xxl {
-        max-width: 1320px;
-        padding: 80px;
+        max-width: 950px;
     }
 }
 
@@ -56,4 +55,10 @@ mat-card {
 .experience {
     display: grid;
     grid-gap: 20px;
+}
+
+.row {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 600;
+    font-size: 14px;
 }
