--- a/src/app/admin/admin.component.scss
+++ b/src/app/admin/admin.component.scss
@@ -70,6 +70,7 @@ mat-drawer-content .home,
   display: block;
   width: -webkit-fill-available;
   height: 75px;
+  background-size: 26px;
   small {
     font: 11px Verdana, Sans-serif;
     position: relative;
