--- a/src/app/admin/batch/batch.component.scss
+++ b/src/app/admin/batch/batch.component.scss
@@ -45,7 +45,7 @@ table thead {
 }
 
 input::placeholder {
-    font: 13px Verdana, Sans-serif;
+    font: 13px 'Open-sans', Sans-serif;
 }
 
 .action {
