--- a/src/app/employee/employee-details/contact/contact.component.html
+++ b/src/app/employee/employee-details/contact/contact.component.html
@@ -19,7 +19,8 @@
             </div>
             <div class="col-md-6">
               <mat-label class="d-block">Contact Number</mat-label>
-              <mat-form-field appearance="outline">
+              <mat-form-field appearance="outline" class="phone">
+                <span class="code">+91</span> 
                 <input matInput class="matInput" formControlName="contactNumber" required>
               </mat-form-field>
             </div>
