--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -42,9 +42,7 @@
     <div class="content">
       <h4 class="home">Home</h4>
       <span class="material-symbols-outlined">chevron_right</span>
-      <h4 class="link">
-        {{item}}
-      </h4>
+      <h4>{{item}}</h4>
     </div>
 
     <router-outlet></router-outlet>
