--- a/src/app/employee/employee-details/education-details/education-details.component.html
+++ b/src/app/employee/employee-details/education-details/education-details.component.html
@@ -79,7 +79,7 @@
   </form>
 
 
-  <mat-card class="submission">
+  <mat-card class="submission" style="margin-top: 25px;">
     <div class="submit">
       <button mat-raised-button class="previous" routerLink="../secondary">Previous</button>
       <button mat-raised-button class="next" [disabled]="educationForm.invalid" routerLink="../address">Next</button>
