--- a/src/app/mentor/mentor.component.html
+++ b/src/app/mentor/mentor.component.html
@@ -19,8 +19,8 @@
               <img src="/assets/images/bulb.png" alt="...">
             </div>
             <button mat-button [matMenuTriggerFor]="menu" class="name">Moulvik
-            <span class="downArrow material-symbols-outlined">keyboard_arrow_down</span>
-          </button>
+              <span class="downArrow material-symbols-outlined">keyboard_arrow_down</span>
+            </button>
             <mat-menu #menu="matMenu">
               <button mat-menu-item>Profile</button>
               <button mat-menu-item>Change Password</button>
@@ -34,21 +34,23 @@
 </nav>
 <mat-drawer-container class="example-container">
   <mat-drawer mode="side" opened class="sidenav">
-    <button mat-button class="matt-button p-0" routerLink="dashboard" [routerLinkActive]="['active']">
-      <img src="/assets/images/dashboard (3).png" alt="" />
-      <small>Dashboard</small>
-    </button>
-    <button mat-button class="matt-button p-0" routerLink="batch" [routerLinkActive]="['active']">
-      <img src="/assets/images/Batch.png" alt="" />
-      <small>Batch</small>
-    </button>
+    <div class="side" (click)="items()">
+      <button mat-button class="matt-button p-0" routerLink="dashboard" [routerLinkActive]="['active']">
+        <img src="/assets/images/dashboard (3).png" alt="" />
+        <small>Dashboard</small>
+      </button>
+      <button mat-button class="matt-button p-0" routerLink="batch" [routerLinkActive]="['active']">
+        <img src="/assets/images/Batch.png" alt="" />
+        <small>Batch</small>
+      </button>
+    </div>
   </mat-drawer>
 
   <mat-drawer-content>
-    <div class="home">
+    <div class="home" *ngIf="present">
       <h4>Home</h4>
       <span class="material-symbols-outlined">chevron_right</span>
-      <h4>Batch</h4>
+      <h4>{{item}}</h4>
     </div>
     <router-outlet></router-outlet>
   </mat-drawer-content>
